fix the layout so it fits the screen on mobile and any desktop(minor fixes)v 0.1.0

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -256,4 +256,8 @@ form {
     padding-right: 10px;
 }
 
+.footerStyling{
+  width: 100%;
+}
+
 /* end of footer styling */
